<resources>
    <string name="app_name">Accessibility Muse</string>
    <string name="permission_dialog_title">Muse necsita su premiso</string>
    <string name="permission_dialog_description">Muse necesita algunos permisos para funcionar correctamente. En las siguientes pantallas, toque "Permitir" para continuar. Si lo niega, Muse no funcionará correctamente hasta que acceda a la configuración de Android y lo permita.</string>
    <string name="permission_dialog_understand">Aceptar</string>
    <string name="app_icon">app_icon</string>
    <string name="iniciar">Iniciar</string>
    <string name="iniciar_captura_de_datos">Iniciar captura de datos</string>
    <string name="conecci_n">Conección</string>
    <string name="lista_de_dispositivos_disponibles">Lista de dispositivos disponibles</string>
    <string name="conectar">Conectar</string>
    <string name="continuar">Continuar</string>
    <string name="estado_de_la_conecci_n_con_el_dispositivo_seleccionado">Estado de la conección con el dispositivo</string>
    <string name="desconectado">Desconectado</string>
    <string name="primary_font">Roboto</string>
    <string name="refresh">Refrescar</string>
    <string name="Iniciar">Iniciar</string>
    <string name="iniciar_contorl_de_dispositivos">Iniciar control de dispositivos</string>
    <string name="deconectar">Deconectar</string>
    <string name="conecci_n_de_dispositivos">Conección de dispositivos</string>
    <string name="captura_de_datos">Captura de datos</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="capturar">Capturar</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="diadema_primer_paso">1.- Antes de empezar la toma de datos, verifique que la diadema (Muse Headband) este bien colocada.</string>
    <string name="diadema_segundo_paso">2.- Para ajustar la diadema correctamente ábrala a su máxima extinción y ponga los sensores de goma detrás de las orejas, entonces empiece a apretar hasta tener un ajuste ceñido.</string>
    <string name="diadema_tercer_paso">3.- La diadema debe estar colocada a la mitad de su frente. No muy abajo ni muy arriba.</string>
    <string name="diadema_cuarto_paso">4.- El maquillaje, hidratantes o acumulación natural de grasa puede interferir en la toma de datos de los sensores.</string>
    <string name="diadema_quinto_paso">5.- Pasa un pañuelo por tu piel para mejorar la señal.</string>
    <string name="empezar">Empezar</string>
    <string name="txt_comand_up">.-</string>
    <string name="txt_command_down">-.</string>
    <string name="txt_command_accept">..</string>
    <string name="televisor">Televisor</string>
    <string name="cambiar_canal">Cambiar canal +</string>
    <string name="cambiar_canal_down">Cambiar canal -</string>
    <string name="encender_televisor">Encender/Apagar televisor</string>
    <string name="comando_actual">Comando actual</string>
    <string name="txt_comand_activate">--</string>
    <string name="largos">Largos</string>
    <string name="cortos">Cortos</string>
    <string name="calibrar">Calibrar</string>
    <string name="el_sistema_solo_grabar_un_maximo_de_15_parpadeos_por_clase">El sistema solo grabará un maximo de 15 parpadeos por clase</string>
    <string name="el_sistema_solo_grabar_un_maximo_de_50_parpadeos_por_clase">El sistema solo grabará un maximo de 50 parpadeos por clase</string>
    <string name="instrucciones_de_testeo">En esta pantalla usted puede probar el sistema y verificar que el clasificador funciona de la manera correcta. En caso de que los parpadeos no estén siendo clasificados correctamente, puede recalibrar el sistema desde la pantalla de calibración.</string>
    <string name="iniciar_prueba_de_parpadeos">Iniciar prueba de parpadeos</string>
    <string name="app_version">Versión 2.1.3</string>
    <string name="configuraci_n">Configuración</string>
    <string name="registro_de_conjunto_de_datos">Registro de conjunto de datos</string>

</resources>
