<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#68B0AB"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app_name" />

    <Button
        android:id="@+id/btn_start_conection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="48dp"
        android:autoSizeMaxTextSize="18sp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/primary_color2"
        android:drawableStart="@drawable/ic_user_white"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_thin"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Calibración de datos"
        android:textAllCaps="false"
        android:textColor="@color/primary_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <Button
        android:id="@+id/btn_start_device_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:autoSizeMaxTextSize="18sp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/primary_color2"
        android:drawableStart="@drawable/ic_feed_white"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_thin"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Control de dispositivos"
        android:textAllCaps="false"
        android:textColor="@color/primary_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_conection" />

    <Button
        android:id="@+id/btn_user_configurations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:layout_marginTop="96dp"
        android:autoSizeMaxTextSize="18sp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/primary_color2"
        android:drawableStart="@drawable/ic_user__settings"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_thin"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/configuraci_n"
        android:textAllCaps="false"
        android:textColor="@color/primary_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_device_control" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:autoSizeMaxTextSize="18sp"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:text="@string/app_version"
        android:textColor="@color/primary_white"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
